v0.1.5
  New features
  Bugs fixed
    * Detection of spurious parameters when declaring parametrized classes now
	works.
  Various

v0.1.4
  New features
    * Basic native template function.
    * Added anchor as a native type for now. A better fix will be to just parse
      for defined types in the lib directory of modules.
    * Tentative defined() implementation. Will not work for resource references.
	* Functions md5, sha1, lowcase, upcase, split.
  Bugs fixed
    * String comparison is not case insensitive.
    * Variable scope for inherited classes should now work.
    * Support for the $module_name variable (probably a bit buggy).
	* Proper location of a "define not found" error.
	* Parsing bug for single quoted strings and slashes.
	* Bug where a resource name is a variable that is actually an array.
	* Array indexing.
	* Top level variables are now supported in Erb.
  Various
    * Removed the title parameter from the catalog printing functions.
    * Used hslint a bit.