@@ -3,6 +3,7 @@ v0.1.5
   Bugs fixed
     * Detection of spurious parameters when declaring parametrized classes now
 	works.
+	* Resource overrides with non trivial names should now work.
   Various
 
 v0.1.4
